k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-resend
  namespace: my-resend
  labels:
    app: my-resend
spec:
  selector:
    app: my-resend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
